add icons as @RomainFeron suggest in issue #11

--- a/src/icons/icons.qrc
+++ b/src/icons/icons.qrc
@@ -1,1 +1,6 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/">
+        <file alias="folder">Folder.png</file>
+        <file alias="display">Xlarge Icons.png</file>
+    </qresource>
+</RCC>
